--- a/server/config/secrets.ini
+++ b/server/config/secrets.ini
@@ -1,8 +1,8 @@
-SSOclientID =   ''
-SSOsecret   =   ''
+SSOclientID =   'b1c55eb01030467193b92cb09ac7b297'
+SSOsecret   =   'SMU4GqeQBZmRQdaHdT23KHoV6Y24d5UOhFpg4uS9'
 
 ; database connection
-dbName  =   'jsig3rc'
+dbName  =   'jsig3'
 dbHost  =    'localhost'
 dbUser  =   'root'
 dbPassword  =   ''
