Revert "fixed sql dump"
This reverts commit b0dabc9df36a1840e1a5f723d291608c05aa173a.

--- a/server/config/secrets.ini
+++ b/server/config/secrets.ini
@@ -1,8 +1,8 @@
-SSOclientID =   'b1c55eb01030467193b92cb09ac7b297'
-SSOsecret   =   'SMU4GqeQBZmRQdaHdT23KHoV6Y24d5UOhFpg4uS9'
+SSOclientID =   ''
+SSOsecret   =   ''
 
 ; database connection
-dbName  =   'jsig3'
+dbName  =   'jsig3rc'
 dbHost  =    'localhost'
 dbUser  =   'root'
 dbPassword  =   ''
