--- a/server/config/config.ini
+++ b/server/config/config.ini
@@ -7,7 +7,7 @@ systemOffsetX = 124 ;
 systemOffsetY = 92 ;
 chainletters = 'xyzdefghijklmnopqrstuvw'
 
-SSOCallbackUrl = 'http://localhost/jsig3public/'
+SSOCallbackUrl = 'http://localhost/jsig3rc/'
 SSOverifyPeer = false
 
 usewhitelist = true
